<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayRedes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RedesSociais">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/LinearRedes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtRedes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/txtRedes"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/imgRedes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/redessociais_12_beta_5"
                tools:ignore="ImageContrastCheck"
                android:contentDescription="@string/imgRedes" />

            <Button
                android:id="@+id/btnProximoRedes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btnProximoRedes" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>