<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="3dp"
    android:layout_marginStart="3dp"
    android:layout_marginLeft="3dp"
    android:layout_marginTop="3dp"
    android:layout_marginEnd="3dp"
    android:layout_marginRight="3dp"
    android:layout_marginBottom="3dp"
    android:background="#EF651B"
    android:theme="@style/ThemeOverlay.RedeSpich.FullscreenContainer"
    tools:context=".FullscreenActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/dummy_content"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->

    <ImageView
        android:id="@+id/imgSpich"
        android:layout_width="259dp"
        android:layout_height="224dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/imgSpich"
        android:padding="3dp"
        android:paddingLeft="3dp"
        android:paddingTop="3dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        app:srcCompat="@drawable/fundo_logo_redes_beta3" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="@style/Widget.Theme.RedeSpich.ButtonBar.Fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:id="@+id/dummy_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dummy_button"
                android:textSize="16sp"
                tools:ignore="TextContrastCheck" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>